# Stock-Analysis

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: backtesting_rules.yaml  scoring_rules.yaml  settings.yaml  watchlist.csv
docs/: phase_3_1_baseline_2026-07-21.md  phase_3_2_baseline_2026-07-21.md
stock_scrapper/: __init__.py  config.py  data_health.py  database.py  exceptions.py  revision_policy.py
stock_scrapper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stock_scrapper/analysis/: __init__.py  confidence_score.py  eligibility.py  engine.py  market_context.py  market_regime.py  opportunity_score.py  repository.py  risk_score.py  scoring_config.py  service.py
stock_scrapper/backtesting/: __init__.py  config.py  corporate_actions.py  diagnostics.py  engine.py  metrics.py  models.py  reporting.py  (+2 more)
tests/: test_analysis.py  test_analysis_service.py  test_backtest_reporting.py  test_backtesting_config.py  test_backtesting_engine.py  test_backtesting_metrics.py  test_backtesting_persistence.py  test_cli.py  test_collector.py  test_config.py  test_corporate_actions.py  test_database.py  test_historical_features.py  test_indicators.py  test_market_context.py  test_migration_integrity.py  test_phase2_reporting.py  test_phase2_stabilization.py  test_phase31_integrity.py  test_phase32_revision_policy.py  test_phase33_universe_and_runs.py  test_quality_lifecycle.py  test_relative_strength.py  test_scoring_math.py  test_source_archive.py  test_validation.py  test_walk_forward.py
tools/: create_source_archive.py
(+25 files in other folders)
