[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-scrapper"
version = "0.6.0"
description = "Free local explainable stock research and historical backtesting for education"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "yfinance>=0.2.0",
  "PyYAML>=6.0.2",
  "exchange-calendars>=4.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["stock_scrapper*"]
